--- a/TT-2016-B045/bibliografia.bib
+++ b/TT-2016-B045/bibliografia.bib
@@ -117,12 +117,27 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
    year = {2002}
  }
 
+@misc{sime,
+    author = {s/a},
+    title = {Cifrado simetrico},
+    howpublished = {Guía de Gnu Privacy Guard},
+    year = {2015},
+    note = {\url{https://www.gnupg.org/gph/es/manual/c190.html#AEN201}}
+}
 @misc{cripto,
    author = {Erika Aguillón Martínez y M.C. Ma. Jaquelina López Barrientos},
    title = "Fundamentos de Criptografía.",
    year = "2012",
     howpublished = {Universidad Nacional Autónoma de México},
    note = {\url{http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/index.php/1-panorama-general/11-concepto-de-criptografia}}
+ }
+
+@misc{ventajasime,
+   author = {Dante Iván González Sánchez},
+   title = "SEGURIDAD EN REDES Y CRIPTOGRAFÍA",
+   year = "2004",
+    howpublished = {Instituto Tecnológico y de Estudios Superiores de Monterrey, Campus Monterrey},
+   note = {\url{https://repositorio.itesm.mx/ortec/handle/11285/571244}}
  }
 
 @book{menezes,
@@ -149,7 +164,17 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
-
+@book{stinson,
+  author    = {Douglas R. Stinson},
+  title     = {Cryptography - theory and practice},
+  series    = {Discrete mathematics and its applications series},
+  publisher = {{CRC} Press},
+  year      = {1995},
+  isbn      = {978-0-8493-8521-6},
+  timestamp = {Thu, 28 Apr 2011 19:43:08 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/books/daglib/0084174},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 
 @misc{servicios,
    author = {Erika Aguillón Martínez y M.C. Ma. Jaquelina López Barrientos},
@@ -305,13 +330,6 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
     note = {\url{http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/}}
 }
 
-@misc{sime,
-    author = {s/a},
-    title = {Cifrado simetrico},
-    howpublished = {Guía de Gnu Privacy Guard},
-    year = {2015},
-    note = {\url{https://www.gnupg.org/gph/es/manual/c190.html#AEN201}}
-}
 
 @misc{em,
     title = {eM Client},
@@ -355,23 +373,6 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
     year = {2015},
     note = {\url{http://www.iab.cl/reflexiones-juridicas-sobre-el-e-marketing-en-chile/}}
 }
-
-@article{cit,
- author = {Roshanbin, Narges and Miller, James},
- title = {A Survey and Analysis of Current CAPTCHA Approaches},
- journal = {J. Web Eng.},
- volume = {12},
- number = {1-2},
- year = {2013},
- issn = {1540-9589},
- pages = {1--40},
- numpages = {40},
- url = {http://dl.acm.org/citation.cfm?id=2481562.2481563},
- acmid = {2481563},
- publisher = {Rinton Press, Incorporated},
- address = {Paramus, NJ},
- keywords = {CAPTCHAs, security, web information systems}
-} 
 
 
 @misc{xcb,
@@ -518,21 +519,6 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
-@inproceedings{clas,
-  author    = {Sandra Diaz-Santiago and
-               Debrup Chakraborty},
-  title     = {On Securing Communication from Profilers},
-  booktitle = {{SECRYPT} 2012 - Proceedings of the International Conference on Security
-               and Cryptography, Rome, Italy, 24-27 July, 2012, {SECRYPT} is part
-               of {ICETE} - The International Joint Conference on e-Business and
-               Telecommunications},
-  year      = {2012},
-  pages     = {154--162},
-  crossref  = {DBLP:conf/secrypt/2012},
-  timestamp = {Sat, 27 Sep 2014 19:08:22 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/secrypt/Diaz-SantiagoC12},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
-}
 
 @inproceedings{Attacks,
   author    = {Philippe Golle and
