CUCL6 Iniciar Sesión

--- a/TT-2016-B045/casosUso/Cliente/CUCLIndex.tex
+++ b/TT-2016-B045/casosUso/Cliente/CUCLIndex.tex
@@ -1,3 +1,4 @@
 \cfinput{casosUso/Cliente/CUCL1}
 \cfinput{casosUso/Cliente/CUCL3}
 \cfinput{casosUso/Cliente/CUCL4}
+\cfinput{casosUso/Cliente/CUCL6}
