--- a/TT-2016-B045/archivosTex/analisisydiseno.tex
+++ b/TT-2016-B045/archivosTex/analisisydiseno.tex
@@ -84,7 +84,7 @@ El proceso inicia cuando el cliente desea subir un archivo nuevo, el cliente deb
 
 \subsubsection{Descripción del proceso Descargar archivo.}
 
-El proceso inicia cuando el cliente desea descargar un archivo, el cliente debe dar clic en la opción de descargar archivo y seleccionar el archivo que desee descargar, el sistema va a mandar el nombre del archivo a la nube para que busque en su base de datos los archivos correspondientes al usuario y nombre del archivo, se le regresaran al cliente y el sistema en el lado del cliente deberá descifrar el archivo C2 que contiene la llave k para poder descifrar el otro archivo C1 donde se encuentra el archivo original, el sistema notificara al cliente que su archivo se ha descargado con éxito y este podrá abrirlo.
+El proceso inicia cuando el cliente desea descargar un archivo, el cliente debe dar clic en la opción de descargar archivo y seleccionar el archivo que desee descargar, el sistema va a mandar el nombre del archivo a la nube para que busque en su base de datos los archivos correspondientes al usuario y nombre del archivo, se le regresaran al cliente y el sistema en el lado del cliente deberá descifrar el archivo C2 que contiene la llave k para poder descifrar el otro archivo C1 donde se encuentra el archivo original, el sistema notificara al cliente que su archivo se ha descargado con éxito y este podrá abrirlo. \\
 
 
 % - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -122,7 +122,7 @@ El proceso inicia cuando el cliente desea descargar un archivo, el cliente debe 
 \vspace{3cm}
 \subsubsection{Descripción del proceso eliminar archivo.}
 
-El proceso inicia cuando el cliente desea eliminar un archivo nuevo, el cliente debe dar clic en la opción de eliminar archivo y seleccionar el archivo que desee eliminar, el sistema va a enviar el nombre del archivo a la nube donde este buscara en su base de datos los archivos que corresponden al usuario y nombre del archivo, los va a eliminar de su base de datos y actualizara su lista de usuarios eliminado de ella los datos del archivo y usuario que coinciden con el archivo eliminado, se le enviara una notificación al cliente que su archivo ha sido eliminado con éxito de la nube.
+El proceso inicia cuando el cliente desea eliminar un archivo nuevo, el cliente debe dar clic en la opción de eliminar archivo y seleccionar el archivo que desee eliminar, el sistema va a enviar el nombre del archivo a la nube donde este buscara en su base de datos los archivos que corresponden al usuario y nombre del archivo, los va a eliminar de su base de datos y actualizara su lista de usuarios eliminado de ella los datos del archivo y usuario que coinciden con el archivo eliminado, se le enviara una notificación al cliente que su archivo ha sido eliminado con éxito de la nube.\\
 
 
 
@@ -154,8 +154,9 @@ El proceso inicia cuando el cliente desea eliminar un archivo nuevo, el cliente 
 	\includegraphics[width=16cm, height=7cm]{./images/BPM_Eliminar.png}
 	\caption{BPMN Eliminar archivo.}
 
-\end{figure}
+\end{figure} 
 
+\newpage
 
 \section{Requerimientos Funcionales. }
 
@@ -321,30 +322,35 @@ RNF4 & Mantenibilidad & \begin{itemize}
 	\BRitem[Tipo:] Restricción de operación.	
 \end{BussinesRule}
 
+\begin{BussinesRule}{RN4}{Usuario registrado} 
+	\BRitem[Descripción:] El usuarios debe tener una cuenta activa en el sistema.
+	\BRitem[Tipo:] Hecho
+\end{BussinesRule}
+
 \section{Especificación de Plataforma}
 
 
-\textbf{Servidor web}
-\begin{enumerate}
-\item \textbf{Hardware}
-\begin{itemize}
-\item Procesador: Intel Xeon 1220
-\item RAM: 4 GB DDR3 1600 MHz
-\end{itemize}
-\item \textbf{Software}
-\begin{itemize}
-\item Sistema operativo: Debian 8 Jessie 64 bits
-\item Servidor web: Apache 2
-\begin{itemize}
-\item Módulo PHP 5 con conector para MongoDB
-\end{itemize}
-\item Servidor de base de datos: MongoDB 3.2
-\end{itemize}
-\item \textbf{Red}
-\begin{itemize}
-\item Conexión a internet cableada de 20 Mb/s
-\end{itemize}
-\end{enumerate}
+%\textbf{Servidor web}
+%\begin{enumerate}
+%\item \textbf{Hardware}
+%\begin{itemize}
+%\item Procesador: Intel Xeon 1220
+%\item RAM: 4 GB DDR3 1600 MHz
+%\end{itemize}
+%\item \textbf{Software}
+%\begin{itemize}
+%\item Sistema operativo: Debian 8 Jessie 64 bits
+%\item Servidor web: Apache 2
+%\begin{itemize}
+%\item Módulo PHP 5 con conector para MongoDB
+%\end{itemize}
+%\item Servidor de base de datos: MongoDB 3.2
+%\end{itemize}
+%\item \textbf{Red}
+%\begin{itemize}
+%\item Conexión a internet cableada de 20 Mb/s
+%\end{itemize}
+%\end{enumerate}
 
 \textbf{Estación de trabajo y computadores personales}
 \begin{enumerate}
