--- a/TT-2016-B045/casosUso/Cliente/CUCLIndex.tex
+++ b/TT-2016-B045/casosUso/Cliente/CUCLIndex.tex
@@ -2,3 +2,4 @@
 \cfinput{casosUso/Cliente/CUCL3}
 \cfinput{casosUso/Cliente/CUCL4}
 \cfinput{casosUso/Cliente/CUCL6}
+\cfinput{casosUso/Cliente/CUCL7}
